Add Stripe subscription system with 7-day free trial
- Implement django-allauth authentication with email & Google OAuth
- Add ParentProfile and ChildProfile models with avatars
- Create Subscription model with trial period tracking
- Integrate Stripe checkout with £9.99/month subscription
- Build member dashboard with subscription status display
- Add custom authentication templates matching site design
- Configure email verification and password reset flows
- Set up webhook handlers for Stripe events
- Protect sensitive data with .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,16 @@ __pycache__/
 *.sqlite3
 *.log
 .env
+.env.local
 .venv/
 venv/
 .DS_Store
 .idea/
 .vscode/
+staticfiles/
+db.sqlite3
+*.pyc
+media/
+check_subscription.py
+check_sub_details.py
+
