--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,8 @@ whitenoise>=6.0.0
 dj-database-url>=2.0.0
 psycopg2-binary>=2.9.0
 python-dotenv>=1.0.0
+django-allauth>=0.63.0
+Pillow>=10.0.0
+stripe>=7.0.0
+PyJWT>=2.8.0
+cryptography>=41.0.0
