feat: Add Phase 1 & 2 - Beautiful admin with TinyMCE, Digital Ocean Spaces integration, project detail pages with age-appropriate styling, career avatars, and smart recommendations

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,9 @@ DB_USER=
 DB_PASSWORD=
 DB_HOST=
 DB_PORT=
+
+# Digital Ocean Spaces (for video/media hosting)
+SPACES_ACCESS_KEY=your-spaces-access-key
+SPACES_SECRET_KEY=your-spaces-secret-key
+SPACES_BUCKET_NAME=zonuko-media
+SPACES_ENDPOINT=https://nyc3.digitaloceanspaces.com
