feat: rename admin route and update avatars

--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,18 @@
 DJANGO_SECRET_KEY=change-me
-DJANGO_DEBUG=True
-DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1
+DJANGO_DEBUG=False
+DJANGO_ALLOWED_HOSTS=zonuko.co.uk www.zonuko.co.uk 178.62.107.167
+CSRF_TRUSTED_ORIGINS=https://zonuko.co.uk https://www.zonuko.co.uk
 
-# Database settings (defaults to SQLite)
-DB_ENGINE=django.db.backends.sqlite3
-DB_NAME=db.sqlite3
-DB_USER=
-DB_PASSWORD=
-DB_HOST=
-DB_PORT=
+# Database (Postgres on DO)
+DATABASE_URL=postgres://USER:PASSWORD@HOST:PORT/DBNAME?sslmode=require
 
-# Digital Ocean Spaces (for video/media hosting)
+# DigitalOcean Spaces (media storage)
 SPACES_ACCESS_KEY=your-spaces-access-key
 SPACES_SECRET_KEY=your-spaces-secret-key
 SPACES_BUCKET_NAME=zonuko-media
 SPACES_ENDPOINT=https://nyc3.digitaloceanspaces.com
+
+# Stripe (use live keys in production)
+STRIPE_PUBLISHABLE_KEY=
+STRIPE_SECRET_KEY=
+STRIPE_WEBHOOK_SECRET=
