--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,7 @@ Pillow>=10.0.0
 stripe>=7.0.0
 PyJWT>=2.8.0
 cryptography>=41.0.0
+django-jazzmin>=3.0.0
+django-tinymce>=4.1.0
+django-storages>=1.13.0
+boto3>=1.26.0
