--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,11 @@ SPACES_ENDPOINT=https://nyc3.digitaloceanspaces.com
 STRIPE_PUBLISHABLE_KEY=
 STRIPE_SECRET_KEY=
 STRIPE_WEBHOOK_SECRET=
+
+# Email (IONOS SMTP)
+EMAIL_HOST=smtp.ionos.co.uk
+EMAIL_PORT=587
+EMAIL_USE_TLS=True
+EMAIL_HOST_USER=support@zonuko.co.uk
+EMAIL_HOST_PASSWORD=your-email-password
+DEFAULT_FROM_EMAIL=Zonuko Team <support@zonuko.co.uk>
